Initial commit of domain and service classes. Implemented JPA persistence layer and SMTP service.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,20 @@
+# ===============================
+# = DB CONNECTION
+# ===============================
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/mail-the-news
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+# for debugging purposes show all sql queries with values
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
 spring.jpa.properties.hibernate.type=trace
+logging.level.org.hibernate.type=trace
 
-logging.level.org.hibernate.type=TRACE
+# possible vlues validate, update, create and create-drop
+spring.jpa.hibernate.ddl-auto=create
