Added new features
Communication through REST API (GET user summary, POST new user).
Support of SSL.
Encryption of user password by BCrypt.
Dummy data loaded on start for test/demo purposes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,19 @@
 # ===============================
+# = LOGGING
+# ===============================
+logging.level.org.springframework.web=debug
+logging.level.org.hibernate=trace
+
+# ===============================
+# = SSL
+# ===============================
+#server.port = 9000
+#server.ssl.key-store = src/main/resources/keystore.p12
+#server.ssl.key-store-password = RaNdOm
+#server.ssl.keyStoreType = PKCS12
+#server.ssl.keyAlias = selfsigned
+
+# ===============================
 # = DB CONNECTION
 # ===============================
 spring.jpa.database=POSTGRESQL
@@ -14,7 +29,11 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
-logging.level.org.hibernate.type=trace
 
 # possible vlues validate, update, create and create-drop
 spring.jpa.hibernate.ddl-auto=create
+
+# ===============================
+# = JACKSON (JSON/XML mapping)
+# ===============================
+spring.jackson.serialization.indent_output=true
