--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,27 @@
 	  <artifactId>commons-csv</artifactId>
 	  <version>1.3</version>
 	</dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>	
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-ws</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+	  <groupId>com.fasterxml.jackson.dataformat</groupId>
+	  <artifactId>jackson-dataformat-xml</artifactId>
+	</dependency>
+	<dependency>
+	  <groupId>org.codehaus.woodstox</groupId>
+	  <artifactId>woodstox-core-asl</artifactId>
+	  <version>4.4.1</version>
+	</dependency>	
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-data-jpa</artifactId>
