--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
       <artifactId>commons-email</artifactId>
       <version>1.4</version>
 	</dependency>
+	<dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.0</version>
+	</dependency>
  	<dependency>
    	  <groupId>javax.mail</groupId>
       <artifactId>mail</artifactId>
@@ -56,10 +61,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>	
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-ws</artifactId>
-    </dependency>
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
@@ -81,6 +82,12 @@
       <groupId>postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>9.1-901-1.jdbc4</version>
+    </dependency>
+    
+    <!-- HAL Browser -->
+    <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-rest-hal-browser</artifactId>
     </dependency>
 		
 	<!-- testing -->
