--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.4.0.RELEASE</version>
+    <version>3.0.1</version>
   </parent>
 	
   <properties>
-  	<java.version>1.8</java.version>
+  	<java.version>17</java.version>
     <cucumber.version>1.2.4</cucumber.version>
   </properties>
     
@@ -60,10 +60,14 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
-    </dependency>	
+    </dependency>
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
     <dependency>
 	  <groupId>com.fasterxml.jackson.dataformat</groupId>
@@ -78,16 +82,21 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-data-jpa</artifactId>
 	</dependency>
-    <dependency>
-      <groupId>postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>9.1-901-1.jdbc4</version>
-    </dependency>
+      <dependency>
+          <groupId>com.h2database</groupId>
+          <artifactId>h2</artifactId>
+          <scope>runtime</scope>
+      </dependency>
+<!--      <dependency>-->
+<!--          <groupId>mysql</groupId>-->
+<!--          <artifactId>mysql-connector-java</artifactId>-->
+<!--          <scope>runtime</scope>-->
+<!--      </dependency>-->
     
     <!-- HAL Browser -->
     <dependency>
         <groupId>org.springframework.data</groupId>
-        <artifactId>spring-data-rest-hal-browser</artifactId>
+        <artifactId>spring-data-rest-hal-explorer</artifactId>
     </dependency>
 		
 	<!-- testing -->
@@ -96,11 +105,11 @@
 		<artifactId>spring-boot-starter-test</artifactId>
 		<scope>test</scope>
 	</dependency>	
-    <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId>
-        <scope>test</scope>
-    </dependency>	
+<!--    <dependency>-->
+<!--        <groupId>com.h2database</groupId>-->
+<!--        <artifactId>h2</artifactId>-->
+<!--        <scope>test</scope>-->
+<!--    </dependency>	-->
     <dependency>
         <groupId>info.cukes</groupId>
         <artifactId>cucumber-java</artifactId>
