--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,22 @@ logging.level.org.hibernate=trace
 # ===============================
 # = DB CONNECTION
 # ===============================
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/mail-the-news
-spring.datasource.username=postgres
-spring.datasource.password=root
+#spring.jpa.database=MYSQL
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/mail-the-news
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database=H2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./data/mail-the-news
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# enable embedded GUI console on http://localhost:8080/h2-console
+spring.h2.console.enabled=true
 
 # ===============================
 # = JPA / HIBERNATE
@@ -30,7 +41,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
 
-# possible vlues validate, update, create and create-drop
+# Creates the database every time but does not drop it on close.
 spring.jpa.hibernate.ddl-auto=create
 
 # ===============================
