Use ResponseStatusException to unify error responses
Use constructor dependency injection as preffered way

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # = LOGGING
 # ===============================
 logging.level.org.springframework.web=debug
-logging.level.org.hibernate=trace
+logging.level.org.hibernate=debug
 
 # ===============================
 # = SSL
@@ -12,6 +12,12 @@ logging.level.org.hibernate=trace
 #server.ssl.key-store-password = RaNdOm
 #server.ssl.keyStoreType = PKCS12
 #server.ssl.keyAlias = selfsigned
+
+# ===============================
+# = HTTP error response
+# ===============================
+server.error.include-message=always
+server.error.include-stacktrace=never
 
 # ===============================
 # = DB CONNECTION
